# Crm_application

./: .env.example  acufy-crm-redesign.html  agents.txt  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_data.py
backend/app/: __init__.py  main.py
backend/app/ai/: graph.py  llm.py  state.py
backend/app/ai/agents/: __init__.py  deal_orchestrator.py  lead_qualifier.py  nurturer.py  opportunity_watch.py  proposal.py  researcher.py  scheduler.py
backend/app/ai/compliance/: __init__.py  base.py  registry.py  universal.py
backend/app/ai/tools/: __init__.py  draft_tools.py  read_tools.py  write_tools.py
backend/app/core/: auth.py  config.py  database.py  events.py  websocket.py
backend/app/models/: __init__.py  account.py  activity.py  agent_approval.py  agent_run.py  agent_task.py  audit_log.py  base.py  compliance_check.py  consent_record.py  contact.py  deal.py  deal_contact_role.py  deal_line_item.py  deal_stage.py  memory_chunk.py  product.py  task.py  team.py  user.py
backend/app/providers/: __init__.py  calendar.py  messaging.py  storage.py
backend/app/routers/: accounts.py  activities.py  agent.py  contacts.py  deals.py  import_export.py  messaging.py  products.py  tasks.py  webhooks.py  ws.py
backend/app/schemas/: account.py  activity.py  agent.py  common.py  contact.py  deal.py  product.py  task.py
backend/app/services/: audit_service.py  consent_service.py
backend/app/workers/: main.py
backend/tests/: conftest.py
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+39 files in other folders)
